[gd_scene load_steps=22 format=3 uid="uid://361a4tx30yli"]

[ext_resource type="Script" uid="uid://l6d8amcv0n6f" path="res://terrains/scripts/door_component.gd" id="1_qvh64"]
[ext_resource type="Texture2D" uid="uid://c4j20i66h7san" path="res://Tiny Swords (Free Pack)/Tiny Swords (Free Pack)/Units/Blue Units/Warrior/Warrior_Attack1.png" id="2_66rus"]
[ext_resource type="Texture2D" uid="uid://3cmnowhlky7x" path="res://Tiny Swords (Free Pack)/Tiny Swords (Free Pack)/Units/Blue Units/Warrior/Warrior_Idle.png" id="2_oof27"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xm0ga"]
size = Vector2(49.5, 85)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r4i"]
atlas = ExtResource("2_66rus")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_72eqk"]
atlas = ExtResource("2_66rus")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ys4er"]
atlas = ExtResource("2_66rus")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vw7lg"]
atlas = ExtResource("2_66rus")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_66rus"]
atlas = ExtResource("2_oof27")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2n5ia"]
atlas = ExtResource("2_oof27")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_td7ce"]
atlas = ExtResource("2_oof27")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8s1f"]
atlas = ExtResource("2_oof27")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1q81n"]
atlas = ExtResource("2_oof27")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_icba8"]
atlas = ExtResource("2_oof27")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tff7"]
atlas = ExtResource("2_oof27")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1i6k"]
atlas = ExtResource("2_oof27")
region = Rect2(1344, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_qvh64"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72eqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys4er")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vw7lg")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_66rus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2n5ia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_td7ce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8s1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1q81n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icba8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tff7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1i6k")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_66rus"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2n5ia"]
resource_name = "attack"
length = 0.40001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_oof27"]
resource_name = "idle"
length = 0.80001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2n5ia"]
_data = {
&"RESET": SubResource("Animation_66rus"),
&"attack": SubResource("Animation_2n5ia"),
&"idle": SubResource("Animation_oof27")
}

[node name="DoorComponent" type="Area2D" node_paths=PackedStringArray("animationPlayer")]
script = ExtResource("1_qvh64")
teleportPosition = Vector2(521, 311)
animationPlayer = NodePath("AnimatedSprite2D/AnimationPlayer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(21, -46)
scale = Vector2(1.23258, 0.541348)
shape = SubResource("RectangleShape2D_xm0ga")
one_way_collision = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -33)
sprite_frames = SubResource("SpriteFrames_qvh64")
animation = &"idle"
autoplay = "idle"
offset = Vector2(0, -30)

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_2n5ia")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
